K8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-application
  labels: 
    app: go-web-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-application
  template:
    metadata:
      labels:
        app: go-web-application
    spec:
      containers:
      - name: go-web-application
        image: arpansaha359/go-web-application:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
